# bazel-prog

./: MODULE.bazel  deps.bzl
app/: BUILD
app/src/main/java/org/example/app/: Main.java
mylib/: BUILD
mylib/src/main/java/org/example/mylib/: Util.java
